# Self_Navigating_Bot_URDF

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch
meshes/: 4cm_studs.STL  base_link.STL  black_plate_big.STL  black_plate_small.STL  castor.STL  castor_base.STL  l_rim.STL  l_wheel.STL  r_clamp.STL  r_rim.STL  upper_plate.STL
navigator_description/: package.xml
navigator_description/meshes/: 6cm_studs.STL  castor_studs.STL  kinect.STL  l_clamp.STL  l_motor.STL  l_shaft.STL  r_motor.STL  r_shaft.STL  r_wheel.STL
navigator_description/rviz/: display.rviz
navigator_description/urdf/: navigator_description.urdf
urdf/: navigator_description.csv  navigator_description.urdf
